--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.5",
     "express-partials": "^0.3.0",
     "express-session": "^1.15.6",
+    "jspdf": "^1.3.5",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
     "sqlite3": "^3.1.13"
